--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
   ],
   "require": {
     "php": "^7.2",
-    "symfony/framework-bundle": "~3.0|~4.0",
-    "doctrine/dbal": "~2.9",
-    "doctrine/doctrine-bundle": "~1.11"
+    "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
+    "doctrine/dbal": "^2.9",
+    "doctrine/doctrine-bundle": "^1.11"
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.0|~8.0",
-    "symfony/yaml": "~3.0|~4.0",
-    "symfony/phpunit-bridge": "~4.3"
+    "phpunit/phpunit": "^7.0 || ^8.0",
+    "symfony/yaml": "^3.4 || ^4.3 || ^5.0",
+    "symfony/phpunit-bridge": "^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -33,5 +33,6 @@
     "branch-alias": {
       "dev-master": "6.1.x-dev"
     }
-  }
+  },
+  "minimum-stability": "dev"
 }
